@@ -950,6 +950,13 @@ static NSString *pathToPhotoOnDisk(NSString *suggestedFilename)
         return [self _defaultMenuItemsForWhitespaceInEditableArea];
     }
 
+    if (hitTestResult->isSelected()) {
+        // A selection should present the read-only text menu. It might make more sense to present a new
+        // type of menu with just copy, but for the time being, we should stay consistent with text.
+        _type = kWKActionMenuReadOnlyText;
+        return [self _defaultMenuItemsForText];
+    }
+
     _type = kWKActionMenuNone;
     return _state != ActionMenuState::Ready ? @[ [NSMenuItem separatorItem] ] : @[ ];
 }
