@@ -1,3 +1,15 @@
+2014-11-19  Beth Dakin  <bdakin@apple.com>
+
+        Invoking an action menu on a selection should result in the text menu
+        https://bugs.webkit.org/show_bug.cgi?id=138892
+        -and corresponding-
+        rdar://problem/18996776
+
+        Reviewed by Tim Horton.
+
+        * UIProcess/mac/WKActionMenuController.mm:
+        (-[WKActionMenuController _defaultMenuItems]):
+
 2014-11-19  Anders Carlsson  <andersca@apple.com>
 
         Fix iOS build.
